# coio

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.zh-CN.md  mkdocs.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: CPM.cmake  FindLiburing.cmake  coio-config.cmake.in  coioConfig.cmake.in
docs/: 0-intro.md  1-api.md  getting_started.md  index.md  reference.md
docs/guides/: allocators.md  cancellation.md  compose_senders.md  coroutines.md  execution_contexts.md  file_io.md  index.md  networking.md  synchronization.md
docs/reference/: epoll_context.md  error.md  execution_contexts.md  generator.md  index.md  iocp_context.md  task.md  uring_context.md
docs/reference/asyncio/: file.md  index.md  io.md  pipe.md
docs/reference/core/: index.md  when_any.md
docs/reference/net/: address.md  index.md  resolver.md  socket.md  tcp.md  udp.md
docs/reference/sync_primitives/: async_latch.md  async_mutex.md  async_semaphore.md  index.md
docs/reference/utils/: async_scope.md  buffers.md  conqueue.md  containers.md  index.md  memory.md  misc.md  signal_set.md  stop_tokens.md  timer.md
examples/: 0_task.cpp  1_sender.cpp  2_concurrent_queue.cpp  CMakeLists.txt  async_latch.cpp  async_mutex.cpp  cat.cpp  common.h  conqueue.cpp  cp.cpp  echo_client.cpp  echo_server.cpp  fifo.cpp  generator.cpp  hello.cpp  json.cpp  multi-threading.cpp  pipe.cpp  schedule.cpp  scope.cpp  start.cpp  task.cpp  tcp_echo_client-with_ssl.cpp  tcp_echo_client.cpp  tcp_echo_server-context_pool.cpp  tcp_echo_server-single_thread.cpp  tcp_echo_server-thread_pool.cpp  tcp_echo_server-with_ssl.cpp  tcp_echo_server-with_timeout.cpp  tcp_echo_server.cpp  tcp_echo_server_multi_thread.cpp  timer.cpp  udp_echo_client.cpp  udp_echo_server.cpp  when_any.cpp
examples/http_server/: CMakeLists.txt  connection.cpp  connection.h  define.h  io_context_pool.cpp  io_context_pool.h  main.cpp  request.h  response.cpp  response.h  router.cpp  router.h
examples/http_server/static/: index.html  style.css
examples/json_rpc/: CMakeLists.txt  client.cpp  json_rpc.h  server.cpp
examples/resources/: cert.pem  key.pem
examples/stmp_client/: CMakeLists.txt  client.h  main.cpp
examples/with_p2300/: CMakeLists.txt  conqueue.cpp  hello.cpp
include/coio/: async_io.h  coio.h  concepts.h  config.h  core.h  error.h  error_code.h  exec.h  execution_context.h  generator.h  inplace_vector.h  schedulers.h  scope_exit.h  steady_timer.h  sync_primitives.h  task.h  task_error.h  timer.h
include/coio/asyncio/: epoll_context.h  file.h  io.h  iocp_context.h  pipe.h  uring_context.h
include/coio/detail/: async_result.h  atomic_intrusive_stack.h  co_memory.h  co_promise.h  concepts.h  config.h  elide.h  error.h  exec.h  execution.h  intrusive_list.h  intrusive_stack.h  io_descriptions.h  manual_lifetime.h  op_queue.h  stoppable_op.h  suppress_pop.h  suppress_push.h  task_error.h  unhandled_stopped.h  waiting_list.h
include/coio/detail/platform/: linux.h
include/coio/net/: async_operation.h  base.h  basic.h  ip.h  resolver.h  socket.h  tcp.h  udp.h
include/coio/net/detail/: error_code.h
include/coio/ssl/: context.h  stream.h  types.h
include/coio/utils/: allocator_resource.h  async_result.h  async_scope.h  atomutex.h  concurrent_queue.h  conqueue.h  fifo.h  fixed_string.h  flat_buffer.h  format.h  inplace_vector.h  json.h  macros.h  new_object.h  polymorphic_scheduler.h  retain_ptr.h  scope_exit.h  signal_set.h  signal_wait.h  stop_token.h  streambuf.h  sync_primitives.h  timer.h  type_traits.h  utility.h  utils.h  variant_sender.h  when_any.h  zstring_view.h
src/: linux.cpp
src/linux/: common.h  epoll.cpp  src.cpp
src/linux/asyncio/: epoll_context.cpp  file.cpp  pipe.cpp  uring_context.cpp
src/linux/net/: base.cpp  basic.cpp  internet.cpp  resolver.cpp  socket.cpp  tcp.cpp  udp.cpp
src/linux/utils/: signal_set.cpp  signal_wait.cpp
src/portable/detail/: error.cpp
src/ssl/: context.cpp  error.cpp  stream.cpp
src/win/: common.h
src/win/asyncio/: file.cpp  iocp_context.cpp  pipe.cpp
src/win/net/: basic.cpp  resolver.cpp  socket.cpp  tcp.cpp  udp.cpp
src/win/utils/: signal_set.cpp  signal_wait.cpp
tests/: CMakeLists.txt  test_async_latch.cpp  test_async_mutex.cpp  test_async_semaphore.cpp  test_endpoint.cpp  test_fifo.cpp  test_generator.cpp  test_inplace_vector.cpp  test_intrusive_list.cpp  test_polymorphic_scheduler.cpp  test_task.cpp
